<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe-LeaderBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="play">Play</string>
    <string name="menu_settings">Settings</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="menu_title_play">Play</string>
    <string name="menu_title_leaderboardboard">Leaderboard</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="title_activity_play_score">PlayScoreActivity</string>
	<string name="your_turn">Your turn!</string>
	<string name="computers_turn">Computer\'s turn!</string>
	<string name="player">Player</string>
	<string name="wins">Wins</string>
	<string name="losses">Losses</string>
	<string name="ties">Ties</string>
</resources>