<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lblPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/header_player_margin"
        android:text="@string/player" />

    <TextView
        android:id="@+id/lblWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/header_wins_margin"
        android:text="@string/wins" />

    <TextView
        android:id="@+id/lblLosses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/header_losses_margin"
        android:text="@string/losses" />

    <TextView
        android:id="@+id/lblTies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ties" />

</LinearLayout>